[workspace]
members = [
    "staticleaf-cli",
    "staticleaf-server", 
    "staticleaf-core"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = "9.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
image = "0.24"
webp = "0.2"
walkdir = "2.0"
rand = "0.8"