[package]
name = "staticleaf-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "staticleaf"
path = "src/main.rs"

[dependencies]
staticleaf-core = { path = "../staticleaf-core" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }