[package]
name = "staticleaf-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "staticleaf-server"
path = "src/main.rs"

[dependencies]
staticleaf-core = { path = "../staticleaf-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }